# Snaze

./: .gitignore  CMakeLists.txt  README.md
__temp__/: CMakeCache.txt  Makefile  cmake_install.cmake
data/input/: sample.txt
include/: Level.h  Player.h  Snake.h  SnakeGame.h  inputHandle.h  receiveInput.h
src/: Level.cpp  main.cpp  receiveInput.cpp  snaze.cpp
src/Models/: Level.cpp  Snake.cpp  SnakeGame.cpp
src/app/: Maze.cpp  Snaze.cpp  header.h  libs.h  main.cpp
src/app/functions/: Maze.cpp
src/app/models/: Maze.h
src/helpers/: functions.cpp  inputHandle.cpp
src/models/: Maze.cpp  Maze.h
src/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  maze_test.cpp  maze_tests.cpp
